--- a/dashboard-angular/angular.json
+++ b/dashboard-angular/angular.json
@@ -21,6 +21,7 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
+            "allowedCommonJsDependencies": ["apexcharts", "sockjs-client"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
