--- a/dashboard-angular/package.json
+++ b/dashboard-angular/package.json
@@ -10,6 +10,8 @@
   },
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^6.1.0", 
+    "sockjs-client": "^1.5.2",  
     "@angular-material-components/datetime-picker": "^16.0.1",
     "@angular/animations": "^15.0.0",
     "@angular/cdk": "^15.0.4",
