--- a/home-angular/nginx.conf
+++ b/home-angular/nginx.conf
@@ -23,7 +23,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name 192.168.1.100;
 
         location / {
             root /usr/share/nginx/html;
